/*
 *
 * PMlib - Performance Monitor library
 *
 * Copyright (c) 2010-2011 VCAD System Research Program, RIKEN.
 * All rights reserved.
 *
 * Copyright (c) 2012-2015 Advanced Institute for Computational Science, RIKEN.
 * All rights reserved.
 *
 */


REVISION HISTORY
================

--------------------------
2015-07-27
r34 change example build
- build libPM.a or libPMmpi.a
- fortran example

--------------------------
2015-07-24
r33 add proc. group and fortran I/F

--------------------------
2015-07-24
r32 add how to compile serial version in INSTALL

--------------------------
2015-06-13
r31 bugfix installer package

--------------------------
2015-06-09
r30 introduce BUILD_DIR to keep source directory clean
- Change to run configure
- Change configure.ac

------------------
2015-03-14
r29 update year
- add mpiicc, mpiicpc
- update description of INSTALL >> ${FFV_HOME}

------------------
2015-02-15
r29 package 3.0.3
 - Rearranged the source code structure
 - Separated the package into MPI version and non-MPI version
 - Sorted out the choice of printing contents depending on either the user
   specified values or the HWPC measured values

------------------
2014-12-15
r28 package 3.0.2
 - added fix for building non-mpi version -D_PM_WITHOUT_MPI_

------------------
2014-11-09
r27 package 3.0.1
 - modify PM_LIBS flags in configure.ac to suppress papi option when it is not specified.

------------------
2014-11-06
 r26 package 3.0.0

------------------
2014-10-30
 r25 New API for initialize/setProperties/start/stop [ver 2.2]

------------------
2014-05-16
 r23 PAPI compile on K [ver 2.1.2]

------------------
2014-05-03
 r22 Introduction of PAPI interface [ver 2.1.0]
 
------------------
2014-03-28
 r21 change string FlatMPI [ver 2.0.3]

------------------
2014-03-08
 r20 introduce mpi_stabs.h [ver 2.0.2]

------------------
2014-03-04
 r19 version format [ver 2.0.1]
  - change output format for pm-config --version
  
------------------
2013-11-02
 